@@ -1345,7 +1345,7 @@ linkend="description-gtktextview">description</link> for more details on
 textview window types.</para>
 
       <note>
-	<para>You can't convert coordinates for a nonexisting window (see
+	<para>You can't convert coordinates for a non-existing window (see
 the <link
 linkend="method-gtktextview--set-border-window-size"><methodname>set_border_window_size</methodname>()</link> 
 method).</para>
@@ -1394,7 +1394,7 @@ above <link linkend="description-gtktextview">description</link> for more
 details on textview window types.</para>
 
       <note>
-	<para>You can't convert coordinates for a nonexisting window (see
+	<para>You can't convert coordinates for a non-existing window (see
 the <link
 linkend="method-gtktextview--set-border-window-size"><methodname>set_border_window_size</methodname>()</link>) 
 method.</para>
@@ -1796,9 +1796,9 @@ iterator</simpara></listitem>
 
       <para>The<methodname> move_visually</methodname>() method moves the
 location of <parameter>iter</parameter> by <parameter>count</parameter>
-cursor positions. iIf count is negative the location moves against the
+cursor positions. If count is negative the location moves against the
 normal text direction. Note a cursor position move may move over multiple
-characters when mutliple cahracters combine to form one grapheme.</para>
+characters when multiple characters combine to form one grapheme.</para>
 
     </refsect2>
 
@@ -1829,7 +1829,9 @@ linkend="class-gtktextbuffer"><classname>gtk.TextBuffer</classname></link></simp
 
       <para>The <methodname>add_child_at_anchor</methodname>() method adds
 the widget specified by <parameter>child</parameter> in the textview, at the
-gtkTextChildAnchor specified by <parameter>anchor</parameter>.</para>
+<link
+linkend="class-gtktextchildanchor"><classname>gtk.TextChildAnchor</classname></link>
+specified by <parameter>anchor</parameter>.</para>
 
     </refsect2>
 
@@ -2147,7 +2149,7 @@ focus is moved to the next widget in the focus chain.</para>
 	<para>This method is available in PyGTK 2.4 and above.</para>
       </note>
 
-      <para>The <methodname>get_accepts_tab</methodname>() emthod returns
+      <para>The <methodname>get_accepts_tab</methodname>() method returns
 the value of the "accepts_tab" property. See the <link
 linkend="method-gtktextview--set-accepts-tab"><methodname>set_accepts_tab()</methodname></link>
 method for more information.</para>
@@ -2323,7 +2325,7 @@ role="keyword">justification</parameter>&nbsp;:</term>
       </variablelist>
 
       <para>The <methodname>set_justification</methodname>() method sets the
-"jsutification" property to the value of
+"justification" property to the value of
 <parameter>justification</parameter>. The value of justification must be one
 of: <literal>gtk.JUSTIFY_LEFT</literal>,
 <literal>gtk.JUSTIFY_RIGHT</literal>, <literal>gtk.JUSTIFY_CENTER</literal>
@@ -2474,7 +2476,7 @@ pixels</simpara></listitem>
 
       <para>The <methodname>set_indent</methodname>() method sets the
 "indent" property to the value of <parameter>indent</parameter>. The
-"indent" porperty determines the indentation for textview paragraphs that
+"indent" property determines the indentation for textview paragraphs that
 are not influenced by a <link
 linkend="class-gtktexttag"><classname>gtk.TextTag</classname></link> that
 sets its "indent" attribute. The indentation may be negative.</para>
@@ -2496,7 +2498,7 @@ indentation</simpara></listitem>
       </variablelist>
 
       <para>The <methodname>get_indent</methodname>() method returns the
-value of the "indent" property. The "indent" porperty determines the
+value of the "indent" property. The "indent" property determines the
 indentation for textview paragraphs that are not influenced by a <link
 linkend="class-gtktexttag"><classname>gtk.TextTag</classname></link> that
 sets its "indent" attribute. The indentation may be negative.</para>
@@ -2726,7 +2728,7 @@ user action (e.g. pressing the <keycap>Delete</keycap> or
       </itemizedlist>
 
       <para><parameter>count</parameter> specifies the number of times that
-deleteion should be applied.</para>
+deletion should be applied.</para>
 
     </refsect2>
 
