@@ -2,9 +2,11 @@
 
 	* pygtk-gtkmenuitem.xml (toggle_size_request) Add description.
 
-	* pygtk-gtktextview.xml (backward_find_char)
+	* pygtk-gtktextiter.xml (backward_find_char)
 	(forward_find_char) Add descriptions of these methods.
 	Fix spelling errors.
+
+	* pygtk-gtktextview.xml Spell checked.
 
 2004-04-30  John Finlay  <finlay@moeraki.com>
 
